--- a/style.css
+++ b/style.css
@@ -1,3 +1,111 @@
+header {
+  background-color: lightgray;
+  position: sticky;
+  top: 0;
+  align-items: center;
+}
+
+header > ul > li {
+  display: inline-block;
+}
+
+#page-title {
+  color: red;
+}
+
+.container {
+  width: 100%;
+  height: 200px;
+  background-color: lightpink;
+}
+
+.flex-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+@media screen and (max-width: 700px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+.child-base {
+  width: 50px;
+  height: 50px;
+  background-color: lightblue;
+  font-size: 10px;
+  border: 1px solid black;
+}
+
+.c1 {
+  position: absolute;
+  top: 200px;
+  left: 200px;
+}
+
+.c2 {
+  position: relative;
+  top: 10px;
+  left: 10px;
+}
+
+.c3 {
+  position: fixed;
+  top: 200px;
+  left: 100px;
+}
+
+.section1 {
+  color: green;
+}
+
+.section2 div {
+  background-color: yellow;
+}
+
+.section3 > div::selection {
+  background-color: yellow;
+}
+
+div {
+  background-color: lightcyan;
+}
+
 h1 {
   color: blue;
+}
+
+h2::first-letter {
+  background-color: orange;
+  color: white;
+}
+
+.section1 > p::before {
+  content: "!あ";
+  color: red;
+  background-color: yellow;
+}
+
+.section1 > p:hover::after {
+  content: "あ!";
+  color: red;
+  background-color: yellow;
+}
+
+.section1 > p:nth-child(even) {
+  background-color: blue;
+  color: white;
+}
+
+.section1 > p:hover {
+  background-color: green;
+  color: white;
 }
